--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -20,9 +20,16 @@
   margin: 1rem 0;
 }
 
+.list {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 .headingMd {
   font-size: 1.2rem;
   line-height: 1.5;
+  text-align: center;
 }
 
 .borderCircle {
