--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -26,6 +26,36 @@
   margin: 0;
 }
 
+.input {
+  font-size: 1rem;
+  border: 1px solid #ddd;
+  border-radius: 0.25rem;
+  padding: 0.5rem;
+  margin: 0.5rem 0 0;
+}
+
+.form {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+
+.submit {
+  background-color: #333;
+  color: #fff;
+  border: 0;
+  border-radius: 0.25rem;
+  padding: 0.5rem 1rem;
+  margin-top: 9px;
+  margin-left: 1rem;
+  height: 2.1rem;
+}
+
+.submit:disabled {
+  background-color: #999;
+}
+
 .headingMd {
   font-size: 1.2rem;
   line-height: 1.5;
