--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -37,7 +37,8 @@
 .form {
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-items: end;
+  gap: 0.5rem;
   width: 100%;
 }
 
@@ -61,6 +62,7 @@
   font-size: 1.2rem;
   line-height: 1.5;
   text-align: center;
+  margin-top: 2rem;
 }
 
 .borderCircle {
@@ -90,23 +92,7 @@
 }
 
 .login {
-  border-radius: 14px;
-  height: 30px;
-  padding: 0 31px;
-  font-size: 15px;
-  line-height: 20px;
-  font-weight: 700;
-  border: 0;
   position: absolute;
   top: 1rem;
   right: 1rem;
-  transition: 0.2s ease-in-out;
-  transition-property: border, background, box-shadow;
-}
-
-.login:hover {
-  --button-box-shadow: 0 14px 14px -6px #000000a3;
-  --button-default-box-shadow: 0 14px 14px -6px #000000a3;
-  background-color: rgb(207, 214, 230);
-  box-shadow: var(--button-box-shadow, var(--button-default-box-shadow, none));
 }
