--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -37,7 +37,7 @@
 .form {
   display: flex;
   justify-content: center;
-  align-items: end;
+  align-items: flex-end;
   gap: 0.5rem;
   width: 100%;
 }
